# video-clip-tools

./: .gitignore  Makefile  README.md  add_text_and_blur.py  gen_zimu.py  pyproject.toml  requirements.txt
docs/: models.md
video_clip_tools/: add_text_and_blur.py  extra_content_from_audio.py  extract_audio_from_video.py  gen_zimu.py
